--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:oracle:thin:@ip:port:SID
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.username=id
-spring.datasource.password=password
-spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/example?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=1234
+spring.datasource.hikari.connection-test-query=SELECT 1
+mybatis.configuration.map-underscore-to-camel-case=true   
