--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/insight?
-			useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.hikari.jdbc-url: jdbc:mysql://localhost:3306/insight?
+					useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234
 spring.datasource.hikari.connection-test-query=SELECT 1
-mybatis.configuration.map-underscore-to-camel-case=true   
+
+mybatis.configuration.map-underscore-to-camel-case=true
+
+
+#spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/insight?
+#		useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+#spring.datasource.hikari.username=root
+#spring.datasource.hikari.password=1234
+#spring.datasource.hikari.connection-test-query=SELECT 1
+#mybatis.configuration.map-underscore-to-camel-case=true   
